code->beauty++;